<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/ic_recipes"
        android:title="@string/nav_recipes" />
    <item
        android:id="@+id/nav_planner"
        android:icon="@drawable/ic_planner"
        android:title="@string/nav_assistant" />
    <item
        android:id="@+id/nav_inventory"
        android:icon="@drawable/ic_inventory"
        android:title="@string/nav_inventory" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>